# duck_chat

./: LICENSE  README.md  api.py  config.py  format.py  main.py  pyproject.toml
.github/workflows/: generate_model.yml  python-test.yml
duck_chat/: __init__.py  __main__.py  api.py  cli.py  config.py  exceptions.py  models.py
duck_chat/cli/: cli.py  commands.py  config.py  entry.py
duck_chat/models/: __init__.py  generate_models.py  model_type.py  models.py
scripts/: format.sh  lint.sh
tests/: test_api.py
